--- a/public/screen.css
+++ b/public/screen.css
@@ -6,4 +6,20 @@ body {
   margin: 0;
   min-height: 100%;
   font: 16px / 1 sans-serif;
+  text-align: center;
+}
+
+.flex{
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  margin: 1em;
+  padding: 1em;
+}
+
+.team-one, .team-two{
+  display: flex;
+  flex-flow: column nowrap;
+  margin: 1em;
+  padding: 1em;
 }
